--- a/src/pages/homepage/Homepage.css
+++ b/src/pages/homepage/Homepage.css
@@ -2,7 +2,7 @@
   text-align: center;
   width: 100%;
   margin: auto;
-  margin-top: 6vh;
+  margin-top: var(--space-4);
 }
 
 .Homepage__subHeading {
